# pyhosting

./: .coveragerc  Dockerfile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  sonar-project.properties  tasks.py
demo/: index.html  nats-server.conf
scripts/: release.py  version.py
src/pyhosting/: __about__.py
src/pyhosting/core/: README.md  __init__.py
src/pyhosting/domain/: errors.py
src/synopsys/: __init__.py
src/synopsys/concurrency/: __init__.py  errors.py  play.py  waiters.py
src/synopsys/core/: __init__.py  actors.py  api.py  events.py  interfaces.py  syntax.py  types.py  utils.py
src/synopsys/instrumentation/: play.py
tests/: conftest.py  utils.py
tests/e2e/: conftest.py
tests/e2e/test_apps/: test_api_version.py  test_http_page_router.py  test_http_page_versions_router.py  test_pages_create_and_publish.py  test_pages_versions.py
tests/e2e/test_cli/: test_cli_flags.py
tests/e2e/test_clients/: test_control_plane_client.py  test_http_control_plane_client.py  test_pages_api_client_http.py  test_pages_api_client_http_init.py
tests/integration/test_gateways/: test_blob_storage_adapters.py  test_files_directory_adapters.py  test_templates_adapters.py
tests/integration/test_repositories/: test_page_repositories.py
tests/unit/: test_version.py
tests/unit/test_actors/: test_sync_blob.py  test_sync_storage.py
tests/unit/test_core/: test_actor_groups.py  test_actor_instrumentation.py  test_event_bus.py  test_events_utils.py  test_in_memory_event_bus_utils.py
tests/unit/test_operations/: test_archives_ops.py
(+136 files in other folders)
