[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhosting"
authors = [
    { name = "Guillaume Charbonnier", email = "guillaume.charbonnier@araymond.com" },
]
description = "Manage and host static web apps"
readme = "README.md"
requires-python = ">=3.8,<4.0"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]
dependencies = ["starlette", "jinja2", "genid>=1.0.1", "httpx", "typer"]

[project.optional-dependencies]
uvicorn = ["uvicorn"]
build = ["build", "invoke", "pip-tools"]
dev = [
    "httpx",
    "black",
    "isort",
    "invoke",
    "flake8",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "types-setuptools",
    "uvicorn",
]
docs = [
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocstrings[python]",
    "pymdown-extensions",
]

[project.scripts]
ph = "pyhosting.applications.cli:cli"
pyhosting = "pyhosting.applications.cli:cli"

[project.urls]
Repository = "https://github.com/charbonnierg/pyhosting"
Issues = "https://github.com/charbonnierg/pyhosting/issues"

[tool.setuptools.dynamic]
version = { attr = "pyhosting.__version__" }
